# Allybi

./: .gitignore  1490  CHAT_SYSTEM_AUDIT.md  DATABASE_MIGRATION_VERIFIED.md  DELIVERABLES_SUMMARY.md  DEPLOYMENT.md  LOCAL_DEVELOPMENT.md  NOTIFICATIONS_V2_AUDIT_REPORT.md  NOTIFICATIONS_V2_PERFECT_MODE_COMPLETE.md  NOTIFICATIONS_V2_QA_SCRIPT.md  NOTIFICATION_INBOX_FIX_DELIVERABLES.md  NOTIFICATION_INBOX_QA_CHECKLIST.md  NOTIFICATION_SYSTEM_RELEASE_CHECKLIST.md  PPTX_DRIFT_DETECTION.md  PPTX_PREVIEW_FUTURE_CHANGES.md  PREVIEW_COUNT_SYSTEM_PROOF.md  PRODUCTION_RUNBOOK_PPTX_PREVIEW.md  REFACTORED_CODE_SNIPPETS.js  REFACTORING_GUIDE.md  UNIVERSAL_MODAL_IMPLEMENTATION_SUMMARY.md  UPLOAD_STUCK_19_PERCENT_FIX.md  docker-compose.dev.yml  docker-compose.local.yml  file_scorecard.csv  package.json
backend/python-engine/: Dockerfile  README.md  pyproject.toml
backend/python-engine/app/: __init__.py  health.py  main.py  models.py  sandbox.py
backend/python-engine/app/recipes/: __init__.py  detect_tables.py  generate_formula.py  infer_schema.py  remove_duplicates.py  simulate_apply.py  trim_whitespace.py  validate_formulas.py
backend/python-engine/tests/: __init__.py  test_detect_tables.py  test_remove_duplicates.py  test_validate_formulas.py
python-services/spreadsheet_engine/: e2e_matrix.py  e2e_test.py  pyproject.toml
python-services/spreadsheet_engine/app/: __init__.py  config.py  main.py
python-services/spreadsheet_engine/app/contracts/: execute_request.py  (+3 more)
python-services/spreadsheet_engine/koda_spreadsheet_engine.egg-info/: SOURCES.txt  requires.txt
(+6431 files in other folders)
